# sales-forecasting-mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: .airflowignore  sales_forecast_training.py
docs/: training.md  troubleshooting.md
docs/pseudocode/: generate_event_stores.md  generate_promotion.md  generate_sales_data.md  train_models.md
frontend/: main.py  requirements.txt  utils.py
include/: config.yaml  data_generator.py  data_loader.py  feature_pipeline.py  training.py
include/evaluate/: __init__.py  diagnostic.py
include/ml_models/: comparation_model.py  ensemble_model.py  visualization_model.py
include/model_serving/: controller.py  models.py  services.py
include/utils/: __init__.py  helpers.py  mlflow_utils.py  s3_utils.py
source/utils/: generator.py
tests/dags/: test_dag_training.py
