[project]
name = "sales-forecasting-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.0.1",
    "fastapi>=0.117.1",
    "holidays>=0.85",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "uvicorn>=0.38.0",
]
